แก้งาน sprint2 - close #442
